syntax = "proto3";
package protobuf;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ymz-ncnk/go-serialization-benchmarks/protobuf";

// protoc --go_out=. --go_opt=paths=source_relative ./protobuf/data_v2.proto

message DataV2 {
	reserved 2,5;

  string Str = 1;
	sfixed32 Int32 = 3;
	double Float64 = 4;
  google.protobuf.Timestamp Time = 6;
}